fix spoonsor area design issue

--- a/index.html
+++ b/index.html
@@ -73,22 +73,88 @@
       <!-- spoonser banner start  -->
       <section class="spoonser-container flex flex-col items-center">
         <!-- First row with 6 logos -->
-        <div class="sponsor-row flex justify-center flex-wrap">
-          <img src="./assets/spoonsors/s_logo_1.png" alt="Sponsor 1" />
-          <img src="./assets/spoonsors/s_logo_2.png" alt="Sponsor 2" />
-          <img src="./assets/spoonsors/s_logo_3.png" alt="Sponsor 3" />
-          <img src="./assets/spoonsors/s_logo_4.png" alt="Sponsor 4" />
-          <img src="./assets/spoonsors/s_logo_5.png" alt="Sponsor 5" />
-          <img src="./assets/spoonsors/s_logo_6.png" alt="Sponsor 6" />
+        <div class="sponsor-row flex justify-center flex-wrap gap-6">
+          <figure class="sponsor-logo">
+            <img
+              src="./assets/spoonsors/s_logo_10.png"
+              alt="Sponsor 1"
+              class="logo-img"
+            />
+          </figure>
+          <figure class="sponsor-logo">
+            <img
+              src="./assets/spoonsors/s_logo_10.png"
+              alt="Sponsor 2"
+              class="logo-img"
+            />
+          </figure>
+          <figure class="sponsor-logo">
+            <img
+              src="./assets/spoonsors/s_logo_10.png"
+              alt="Sponsor 3"
+              class="logo-img"
+            />
+          </figure>
+          <figure class="sponsor-logo">
+            <img
+              src="./assets/spoonsors/s_logo_10.png"
+              alt="Sponsor 4"
+              class="logo-img"
+            />
+          </figure>
+          <figure class="sponsor-logo">
+            <img
+              src="./assets/spoonsors/s_logo_10.png"
+              alt="Sponsor 5"
+              class="logo-img"
+            />
+          </figure>
+          <figure class="sponsor-logo">
+            <img
+              src="./assets/spoonsors/s_logo_10.png"
+              alt="Sponsor 6"
+              class="logo-img"
+            />
+          </figure>
         </div>
 
         <!-- Second row with 5 logos -->
-        <div class="sponsor-row flex justify-center flex-wrap">
-          <img src="./assets/spoonsors/s_logo_7.png" alt="Sponsor 7" />
-          <img src="./assets/spoonsors/s_logo_8.png" alt="Sponsor 8" />
-          <img src="./assets/spoonsors/s_logo_9.png" alt="Sponsor 9" />
-          <img src="./assets/spoonsors/s_logo_10.png" alt="Sponsor 10" />
-          <img src="./assets/spoonsors/s_logo_11.png" alt="Sponsor 11" />
+        <div class="sponsor-row flex justify-center flex-wrap gap-6">
+          <figure class="sponsor-logo">
+            <img
+              src="./assets/spoonsors/s_logo_10.png"
+              alt="Sponsor 7"
+              class="logo-img"
+            />
+          </figure>
+          <figure class="sponsor-logo">
+            <img
+              src="./assets/spoonsors/s_logo_10.png"
+              alt="Sponsor 8"
+              class="logo-img"
+            />
+          </figure>
+          <figure class="sponsor-logo">
+            <img
+              src="./assets/spoonsors/s_logo_10.png"
+              alt="Sponsor 9"
+              class="logo-img"
+            />
+          </figure>
+          <figure class="sponsor-logo">
+            <img
+              src="./assets/spoonsors/s_logo_10.png"
+              alt="Sponsor 10"
+              class="logo-img"
+            />
+          </figure>
+          <figure class="sponsor-logo">
+            <img
+              src="./assets/spoonsors/s_logo_10.png"
+              alt="Sponsor 11"
+              class="logo-img"
+            />
+          </figure>
         </div>
       </section>
       <!-- spoonser banner end -->
